<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
    <string name="ssdk_sinaweibo">新浪微博</string>
	<string name="ssdk_tencentweibo">腾讯微博</string>
	<string name="ssdk_qzone">QQ空间</string>
	<string name="ssdk_wechat">微信好友</string>
	<string name="ssdk_wechatmoments">微信朋友圈</string>
	<string name="ssdk_wechatfavorite">微信收藏</string>
	<string name="ssdk_facebook">Facebook</string>
	<string name="ssdk_twitter">Twitter</string>
	<string name="ssdk_renren">人人网</string>
	<string name="ssdk_kaixin">开心网</string>
	<string name="ssdk_email">邮件</string>
	<string name="ssdk_shortmessage">信息</string>
	<string name="ssdk_sohumicroblog">搜狐微博</string>
	<string name="ssdk_sohusuishenkan">搜狐随身看</string>
	<string name="ssdk_neteasemicroblog">网易微博</string>
	<string name="ssdk_douban">豆瓣</string>
	<string name="ssdk_youdao">有道云笔记</string>
	<string name="ssdk_evernote">印象笔记</string>
	<string name="ssdk_linkedin">领英</string>
	<string name="ssdk_googleplus">Google+</string>
	<string name="ssdk_foursquare">FourSquare</string>
	<string name="ssdk_qq">QQ</string>
	<string name="ssdk_pinterest">Pinterest</string>
	<string name="ssdk_flickr">Flickr</string>
	<string name="ssdk_tumblr">Tumblr</string>
	<string name="ssdk_dropbox">Dropbox</string>
	<string name="ssdk_vkontakte">VK</string>
	<string name="ssdk_instagram">Instagram</string>
	<string name="ssdk_yixin">易信</string>
	<string name="ssdk_yixinmoments">易信朋友圈</string>
	<string name="ssdk_mingdao">明道</string>
	<string name="ssdk_kakaotalk">KakaoTalk</string>
	<string name="ssdk_kakaostory">KakaoStory</string>
	<string name="ssdk_line">Line</string>
	<string name="ssdk_bluetooth">蓝牙</string>
	<string name="ssdk_whatsapp">WhatsApp</string>
	<string name="ssdk_pocket">Pocket</string>
	<string name="ssdk_instapaper">Instapaper</string>
	<string name="ssdk_instapaper_email">邮箱</string>
	<string name="ssdk_instapaper_pwd">密码</string>
	<string name="ssdk_instapaper_login">登录</string>
	<string name="ssdk_instapaper_logining">登录中…</string>
	<string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_alipaymoments">支付宝生活圈</string>
    <string name="ssdk_plurk">Plurk</string>
	<string name="ssdk_youtube">Youtube</string>
    <string name="ssdk_dingding">钉钉</string>
	<string name="ssdk_meipai">美拍</string>
	<string name="ssdk_telegram">Telegram</string>
	<string name="ssdk_cmcc">中国移动</string>
	<string name="ssdk_reddit">reddit</string>
	<string name="ssdk_telecom">中国电信</string>
	<string name="ssdk_accountkit">Accountkit</string>
	<string name="ssdk_share_to_qzone">分享到QQ空间</string>
	<string name="ssdk_share_to_qq">分享到QQ</string>
	<string name="ssdk_share_to_facebook">分享到Facebook</string>
	<string name="ssdk_mingdao_share_content">网页分享</string>
	<string name="ssdk_share_to_mingdao">分享到明道</string>
	<string name="ssdk_share_to_googleplus">分享到Google+</string>
	<string name="ssdk_share_to_qzone_default">来自%s的分享</string>
	<string name="ssdk_use_login_button">请改用“登录”按钮</string>
	<string name="ssdk_share_to_youtube">分享到Youtube</string>
	
</resources>
