<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/share_over_on"
    >

   <TextView
        android:id="@+id/tv_cancel_share_popview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        />
    <!-- android:background="@drawable/share_bg" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_share_background">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:id="@+id/ll_share_whatsapp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_whatsapp"
                            android:layout_marginTop="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_share_facebook"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_facebook"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_share_line"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_line"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_share_wechat"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_wechat"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_share_wechatmoments"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                          android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_wechatmoments"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_share_qq"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_qq"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_share_qzone"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                             android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_qzone"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_share_sina"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ssdk_sinaweibo"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/system_setting_line"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:scrollbars="none">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_copy_url"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="share_copy_url"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_collection"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                           android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="share_collection" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_word_set"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="share_word_setting" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_report_error"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="share_report_error" />
                    </LinearLayout>



                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
          
            android:background="@drawable/shape_share_background">
            <Button
                  android:gravity="center"
                android:id="@+id/btn_share_pop_cancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#00000000"
                android:text="取消"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>